# auth-server

./: Cargo.toml  Dockerfile  LICENSE  README.md  build-server-dockerimage.sh  docker-compose.yml
authc-cli/: Cargo.toml
authc-cli/authc-cli/src/: main.rs
authc-cli/src/: cli.yml  main.rs
authc/authc/: Cargo.toml
authc/src/: lib.rs
common/: Cargo.toml
common/src/: lib.rs
server/: Cargo.toml
server/server/src/: auth.rs  cache.rs  web.rs
server/src/: auth.rs  main.rs  ratelimit.rs  web.rs
