[package]
name = "authc"
version = "1.0.0"
authors = ["Acrimon <joel.wejdenstal@gmail.com>"]
edition = "2018"

[dependencies]
reqwest = { version = "0.10.8", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1.0.115", features = ["derive"] }
url = "2.1.1"
uuid = { version = "0.8.1", default-features = false, features = ["serde", "v4"] }
auth-common = { path = "../common" }
hex = "0.3.2"
fxhash = "0.2.1"
rust-argon2 = { version = "0.8.2", default-features = false }
